parser.y
/*
Declare token types at the top of the bison file,
causing them to be automatically generated in parser.tab.h
for use by scanner.c.
*/

/*%token TOKEN_ID*/
%token TOKEN_INTEGER
%token TOKEN_FLOAT
%token TOKEN_SEMI
%token TOKEN_ADD
%token TOKEN_SUBTRACT
%token TOKEN_MULTIPLY
%token TOKEN_DIVIDE
%token TOKEN_LPAREN
%token TOKEN_RPAREN
/* new tokens */
%token TOKEN_CAR
%token TOKEN_LAT
%token TOKEN_ATOM

/* define different types */
%union {
	int int_pointer;
	int* int_array;
};
%type <int_pointer> program expr func term list list_item
/*%type <int_array> list list_item*/

%{

#include <math.h>
#include <stdio.h>
#include <stdlib.h>

/*
YYSTYPE is the lexical value returned by each rule in a bison grammar.
By default, it is an integer. In this example, we are computing
arithmetic values as a double.
*/

/* #define YYSTYPE double */

/*
Clunky: Manually declare the interface to the scanner generated by flex. 
*/

extern char *yytext;
extern int yylex();
extern int yyerror( char *str );

/*
Clunky: Keep the final result of the parse in a global variable,
so that it can be retrieved by main().
*/

double parser_result = 0.0;

%}

%%

/* Here is the grammar: program is the start symbol. */

/* new grammar for scheme*/
program	: expr
		{ parser_result = $1; return 0; }
	;
/* expression that returns a single value (ints) */
expr	: TOKEN_LPAREN func TOKEN_RPAREN
		{ $$ = $2; }
	| term
		{ $$ = $1; } 
	;
/* functions that returns a single value */
func	: TOKEN_ADD expr expr
		{ $$ = $2 + $3; }
	| TOKEN_SUBTRACT expr expr
		{ $$ = $2 - $3; }
	| TOKEN_MULTIPLY expr expr
		{ $$ = $2 * $3; }
	| TOKEN_DIVIDE expr expr
		{
			if($3==0) {
				printf("runtime error: divide by zero\n");
				exit(1);
			}
			$$ = $2 / $3;
		}
	| TOKEN_CAR list
		{ $$ = $2; }
	;
/* single value (int) */
term	: TOKEN_INTEGER
		{ $$ = atoi(yytext); }
	;
/* list of values (type array of ints) */
list	: TOKEN_LPAREN list_item TOKEN_RPAREN
		{ $$ = $2; }
	;
list_item : expr list_item
		{ $$ = $1; }
	| expr	
		{ $$ = $1; }	
	;
%%

/*
This function will be called by bison if the parse should
encounter an error.  In principle, "str" will contain something
useful.  In practice, it often does not.
*/

int yyerror( char *str )
{
	printf("parse error: %s\n",str);
	return 0;
}
