parser.output
Terminals unused in grammar

   TOKEN_FLOAT
   TOKEN_SEMI
   TOKEN_LAT
   TOKEN_ATOM


Grammar

    0 $accept: program $end

    1 program: TOKEN_LPAREN expr TOKEN_RPAREN

    2 expr: TOKEN_ADD term term
    3     | TOKEN_SUBTRACT term term
    4     | TOKEN_MULTIPLY term term
    5     | TOKEN_DIVIDE term term
    6     | TOKEN_CAR TOKEN_LPAREN list TOKEN_RPAREN

    7 term: TOKEN_INTEGER
    8     | TOKEN_LPAREN expr TOKEN_RPAREN

    9 list: TOKEN_INTEGER
   10     | TOKEN_LPAREN list TOKEN_RPAREN
   11     | TOKEN_INTEGER list


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_INTEGER (258) 7 9 11
TOKEN_FLOAT (259)
TOKEN_SEMI (260)
TOKEN_ADD (261) 2
TOKEN_SUBTRACT (262) 3
TOKEN_MULTIPLY (263) 4
TOKEN_DIVIDE (264) 5
TOKEN_LPAREN (265) 1 6 8 10
TOKEN_RPAREN (266) 1 6 8 10
TOKEN_CAR (267) 6
TOKEN_LAT (268)
TOKEN_ATOM (269)


Nonterminals, with rules where they appear

$accept (15)
    on left: 0
program (16)
    on left: 1, on right: 0
expr (17)
    on left: 2 3 4 5 6, on right: 1 8
term (18)
    on left: 7 8, on right: 2 3 4 5
list (19)
    on left: 9 10 11, on right: 6 10 11


state 0

    0 $accept: . program $end

    TOKEN_LPAREN  shift, and go to state 1

    program  go to state 2


state 1

    1 program: TOKEN_LPAREN . expr TOKEN_RPAREN

    TOKEN_ADD       shift, and go to state 3
    TOKEN_SUBTRACT  shift, and go to state 4
    TOKEN_MULTIPLY  shift, and go to state 5
    TOKEN_DIVIDE    shift, and go to state 6
    TOKEN_CAR       shift, and go to state 7

    expr  go to state 8


state 2

    0 $accept: program . $end

    $end  shift, and go to state 9


state 3

    2 expr: TOKEN_ADD . term term

    TOKEN_INTEGER  shift, and go to state 10
    TOKEN_LPAREN   shift, and go to state 11

    term  go to state 12


state 4

    3 expr: TOKEN_SUBTRACT . term term

    TOKEN_INTEGER  shift, and go to state 10
    TOKEN_LPAREN   shift, and go to state 11

    term  go to state 13


state 5

    4 expr: TOKEN_MULTIPLY . term term

    TOKEN_INTEGER  shift, and go to state 10
    TOKEN_LPAREN   shift, and go to state 11

    term  go to state 14


state 6

    5 expr: TOKEN_DIVIDE . term term

    TOKEN_INTEGER  shift, and go to state 10
    TOKEN_LPAREN   shift, and go to state 11

    term  go to state 15


state 7

    6 expr: TOKEN_CAR . TOKEN_LPAREN list TOKEN_RPAREN

    TOKEN_LPAREN  shift, and go to state 16


state 8

    1 program: TOKEN_LPAREN expr . TOKEN_RPAREN

    TOKEN_RPAREN  shift, and go to state 17


state 9

    0 $accept: program $end .

    $default  accept


state 10

    7 term: TOKEN_INTEGER .

    $default  reduce using rule 7 (term)


state 11

    8 term: TOKEN_LPAREN . expr TOKEN_RPAREN

    TOKEN_ADD       shift, and go to state 3
    TOKEN_SUBTRACT  shift, and go to state 4
    TOKEN_MULTIPLY  shift, and go to state 5
    TOKEN_DIVIDE    shift, and go to state 6
    TOKEN_CAR       shift, and go to state 7

    expr  go to state 18


state 12

    2 expr: TOKEN_ADD term . term

    TOKEN_INTEGER  shift, and go to state 10
    TOKEN_LPAREN   shift, and go to state 11

    term  go to state 19


state 13

    3 expr: TOKEN_SUBTRACT term . term

    TOKEN_INTEGER  shift, and go to state 10
    TOKEN_LPAREN   shift, and go to state 11

    term  go to state 20


state 14

    4 expr: TOKEN_MULTIPLY term . term

    TOKEN_INTEGER  shift, and go to state 10
    TOKEN_LPAREN   shift, and go to state 11

    term  go to state 21


state 15

    5 expr: TOKEN_DIVIDE term . term

    TOKEN_INTEGER  shift, and go to state 10
    TOKEN_LPAREN   shift, and go to state 11

    term  go to state 22


state 16

    6 expr: TOKEN_CAR TOKEN_LPAREN . list TOKEN_RPAREN

    TOKEN_INTEGER  shift, and go to state 23
    TOKEN_LPAREN   shift, and go to state 24

    list  go to state 25


state 17

    1 program: TOKEN_LPAREN expr TOKEN_RPAREN .

    $default  reduce using rule 1 (program)


state 18

    8 term: TOKEN_LPAREN expr . TOKEN_RPAREN

    TOKEN_RPAREN  shift, and go to state 26


state 19

    2 expr: TOKEN_ADD term term .

    $default  reduce using rule 2 (expr)


state 20

    3 expr: TOKEN_SUBTRACT term term .

    $default  reduce using rule 3 (expr)


state 21

    4 expr: TOKEN_MULTIPLY term term .

    $default  reduce using rule 4 (expr)


state 22

    5 expr: TOKEN_DIVIDE term term .

    $default  reduce using rule 5 (expr)


state 23

    9 list: TOKEN_INTEGER .
   11     | TOKEN_INTEGER . list

    TOKEN_INTEGER  shift, and go to state 23
    TOKEN_LPAREN   shift, and go to state 24

    $default  reduce using rule 9 (list)

    list  go to state 27


state 24

   10 list: TOKEN_LPAREN . list TOKEN_RPAREN

    TOKEN_INTEGER  shift, and go to state 23
    TOKEN_LPAREN   shift, and go to state 24

    list  go to state 28


state 25

    6 expr: TOKEN_CAR TOKEN_LPAREN list . TOKEN_RPAREN

    TOKEN_RPAREN  shift, and go to state 29


state 26

    8 term: TOKEN_LPAREN expr TOKEN_RPAREN .

    $default  reduce using rule 8 (term)


state 27

   11 list: TOKEN_INTEGER list .

    $default  reduce using rule 11 (list)


state 28

   10 list: TOKEN_LPAREN list . TOKEN_RPAREN

    TOKEN_RPAREN  shift, and go to state 30


state 29

    6 expr: TOKEN_CAR TOKEN_LPAREN list TOKEN_RPAREN .

    $default  reduce using rule 6 (expr)


state 30

   10 list: TOKEN_LPAREN list TOKEN_RPAREN .

    $default  reduce using rule 10 (list)
